added makefile and .bib

--- a/docs/problem-statement.tex
+++ b/docs/problem-statement.tex
@@ -28,7 +28,7 @@
 \usepackage{hyperref}
 \usepackage{geometry}
 
-\title{Problem Statement \\ CS Senior Capstone \\ \vspace{2mm}\small CS461 (Fall 2016)}
+\title{Problem Statement \\ CS Senior Capstone \\ \vspace{2mm}\small CS461 Fall 2016}
 \author{Authored by \\ Nathan Healea, Stephen Krueger, Matthew Zakrevsky}
 \date{October 12, 2016}
 \begin{document}
